--- a/Sass-grid/proyecto/index.html
+++ b/Sass-grid/proyecto/index.html
@@ -1,51 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <title>Frontend Mentor | Fylo landing page with two column layout</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/style.css">
-  <title>Frontend Mentor | Fylo landing page with two column layout</title>
-</head>
-
-<body>
-  <header class="header">
-    <h1 class="header__logo">
-      <img src="images/logo.svg" alt="Image with the logo and the name.">
-    </h1><!--  -->
-    <nav class="header__nav">
-      <a class="header__tabs" href="#">Features</a>
-      <a class="header__tabs" href="#">Team</a>
-      <a class="header__tabs" href="#">Sign in</a>
-    </nav>
-  </header>
-  <!-- <ul class="ul">
+  <body>
+    <header class="header">
+      <h1 class="header__logo">
+        <img src="images/logo.svg" alt="Image with the logo and the name." />
+      </h1>
+      <!--  -->
+      <nav class="header__nav">
+        <a class="header__tabs" href="#">Features</a>
+        <a class="header__tabs" href="#">Team</a>
+        <a class="header__tabs" href="#">Sign in</a>
+      </nav>
+    </header>
+    <!-- <ul class="ul">
   <li class="li-1">fgjygfyuj</li>
   <li class="li-2">fgjygfyuj</li>
   <li class="li-3">fgjygfyuj</li>
 </ul> -->
 
-  <main class="main">
-    <section class="main__section-1">
-      <h2 class="section-1__title">All your files in one secure location, accssesible anywhere.</h2>
-      <p class="section-1__description">Fylo stores your most important files in one secure location. Access them
-        wherever you need, share and collaborate with friends, family and coworkers.</p>
-      <form class="section-1__form" name="Form of section 1" action="" method="post" autocomplete="on">
-        <input type="email" name="" id="">
-        <input type="button" value="Get started">
-      </form>
-      <img src="images/illustration-1.svg" alt="" class="section-1__image">
-    </section>
+    <main class="main">
+      <section class="main__section-1">
+        <h2 class="section-1__title">
+          All your files in one secure location, accssesible anywhere.
+        </h2>
+        <p class="section-1__description">
+          Fylo stores your most important files in one secure location. Access
+          them wherever you need, share and collaborate with friends, family and
+          coworkers.
+        </p>
+        <form
+          class="section-1__form"
+          name="Form of section 1"
+          action=""
+          method="post"
+          autocomplete="on"
+        >
+          <input type="email" name="" id="" />
+          <input type="button" value="Get started" />
+        </form>
+        <img src="images/illustration-1.svg" alt="" class="section-1__image" />
+      </section>
 
-    <!--     <div class="container">
+      <!--     <div class="container">
       <div class="caja caja-1"></div>
       <div class="caja caja-2"></div>
       <div class="caja caja-3"></div>
       <div class="caja caja-4"></div>
     </div> -->
-
-  </main>
-
-</body>
-
+    </main>
+  </body>
 </html>
