--- a/Sass-grid/proyecto/index.html
+++ b/Sass-grid/proyecto/index.html
@@ -42,8 +42,8 @@
           method="post"
           autocomplete="on"
         >
-          <input type="email" name="" id="" />
-          <input type="button" value="Get started" />
+          <input class="section-1__email" type="email" name="" id="" />
+          <input class="section-1__button" type="button" value="Get started" />
         </form>
         <img src="images/illustration-1.svg" alt="" class="section-1__image" />
       </section>
