--- a/Sass-grid/proyecto/index.html
+++ b/Sass-grid/proyecto/index.html
@@ -48,12 +48,12 @@
         <img src="images/illustration-1.svg" alt="" class="section-1__image" />
       </section>
 
-      <!--     <div class="container">
+          <div class="container">
       <div class="caja caja-1"></div>
       <div class="caja caja-2"></div>
       <div class="caja caja-3"></div>
       <div class="caja caja-4"></div>
-    </div> -->
+    </div>
     </main>
   </body>
 </html>
