--- a/Sass-grid/proyecto/index.html
+++ b/Sass-grid/proyecto/index.html
@@ -12,8 +12,7 @@
       <h1 class="header__logo">
         <img src="images/logo.svg" alt="Image with the logo and the name." />
       </h1>
-      <!--  -->
-      <nav class="header__nav">
+          <nav class="header__nav">
         <a class="header__tabs" href="#">Features</a>
         <a class="header__tabs" href="#">Team</a>
         <a class="header__tabs" href="#">Sign in</a>
@@ -48,12 +47,12 @@
         <img src="images/illustration-1.svg" alt="" class="section-1__image" />
       </section>
 
-          <div class="container">
+<!--           <div class="container">
       <div class="caja caja-1"></div>
       <div class="caja caja-2"></div>
       <div class="caja caja-3"></div>
       <div class="caja caja-4"></div>
-    </div>
+    </div> -->
     </main>
   </body>
 </html>
