--- a/Sass-grid/proyecto/index.html
+++ b/Sass-grid/proyecto/index.html
@@ -9,10 +9,13 @@
 
   <body>
     <header class="header">
-      <h1 class="header__logo">
-        <img src="images/logo.svg" alt="Image with the logo and the name." />
-      </h1>
-          <nav class="header__nav">
+      <img
+        class="header__logo"
+        src="images/logo.svg"
+        alt="Image with the logo and the name."
+      />
+
+      <nav class="header__nav">
         <a class="header__tabs" href="#">Features</a>
         <a class="header__tabs" href="#">Team</a>
         <a class="header__tabs" href="#">Sign in</a>
@@ -47,7 +50,7 @@
         <img src="images/illustration-1.svg" alt="" class="section-1__image" />
       </section>
 
-<!--           <div class="container">
+      <!--           <div class="container">
       <div class="caja caja-1"></div>
       <div class="caja caja-2"></div>
       <div class="caja caja-3"></div>
