--- a/Sass-grid/proyecto/index.html
+++ b/Sass-grid/proyecto/index.html
@@ -14,7 +14,7 @@
         src="images/logo.svg"
         alt="Image with the logo and the name."
       />
-      <nav class="header__nav">
+      <nav class="header__nav borde">
         <a class="header__tabs" href="#">Features</a>
         <a class="header__tabs" href="#">Team</a>
         <a class="header__tabs" href="#">Sign in</a>
