--- a/Sass-grid/proyecto/index.html
+++ b/Sass-grid/proyecto/index.html
@@ -15,9 +15,9 @@
         alt="Image with the logo and the name."
       />
       <nav class="header__nav borde">
-        <a class="header__tabs" href="#">Features</a>
-        <a class="header__tabs" href="#">Team</a>
-        <a class="header__tabs" href="#">Sign in</a>
+        <a class="header__tabs borde-1" href="#">Features</a>
+        <a class="header__tabs borde-1" href="#">Team</a>
+        <a class="header__tabs borde-1" href="#">Sign in</a>
       </nav>
     </header>
     <!-- <ul class="ul">
