--- a/Sass-grid/proyecto/index.html
+++ b/Sass-grid/proyecto/index.html
@@ -14,10 +14,10 @@
         src="images/logo.svg"
         alt="Image with the logo and the name."
       />
-      <nav class="header__nav borde">
-        <a class="header__tabs borde-1" href="#">Features</a>
-        <a class="header__tabs borde-1" href="#">Team</a>
-        <a class="header__tabs borde-1" href="#">Sign in</a>
+      <nav class="header__nav">
+        <a class="header__tabs" href="#">Features</a>
+        <a class="header__tabs" href="#">Team</a>
+        <a class="header__tabs" href="#">Sign in</a>
       </nav>
     </header>
     <!-- <ul class="ul">
