--- a/Sass-grid/proyecto/index.html
+++ b/Sass-grid/proyecto/index.html
@@ -55,7 +55,7 @@
       </section>
 
       <section class="main__section-2">
-        <h2 class="section-2__title">Stay productive wherever you are</h2>
+        <h2 class="section-2__title">Stay productive, wherever you are</h2>
         <section class="section-2__description">
           <p class="section-2__paragraph">
             Never let location be an issue when accessing your files your files.
@@ -117,8 +117,8 @@
           </blockquote>
           <footer class="card__footer">
             <i class="card__icon"></i>
-            <h2 class="card__name">Kyle Burton</h2>
-            <h3 class="card__description">Founder & CEO, Huddle</h3>
+            <h3 class="card__name">Kyle Burton</h3>
+            <h4 class="card__description">Founder & CEO, Huddle</h4>
           </footer>
         </div>
         <img src="images/il.jpg" alt="" class="section-2__image" />
